@@ -1,5 +1,6 @@
 post-v1.9.0
 --------------------
+    - The maximum size of the MAC learning table is now configurable.
     - New support for the VXLAN tunnel protocol (see the IETF draft here:
       http://tools.ietf.org/html/draft-mahalingam-dutt-dcops-vxlan-02).
     - New "vlog/disable-rate-limit" and "vlog/enable-rate-limit" commands
